
## Core ##
 - There has been internal code re-organization (e.g. not using functions
   named `tr()`) to help translation tools.
 - Strings everywhere have been given more context. (thanks Emir)
 - In CMake, "view" is no longer accepted as an alias of the module
   type "viewmodule" in function `calamares_add_plugin()`.
 - Plain Ubuntu builds have been added to the CI roster. (thanks Simon)

## Modules ##
 - The *displaymanager* module configuration for `greetd` has some more
   options now. (thanks Aleksey)


# 3.3.0 (2023-12-12)

This release contains contributions from (alphabetically by first name):
 - Adriaan de Groot
 - Alberto Salvia Novella
 - Christophe Marin
 - Evan Maddock
 - Frede Hundewadt

Since this is the first non-alpha release of 3.3.0, we would like to thank
all the contributors to a year and a half of alpha releases, six in all.
Distributions are **strongly** advices to take the release notes of
the alpha's into account as well.

## Core ##
 - No changes of note.

## Modules ##
 - *users* and *usersq* no longer support the password requirement 'nonempty'.
   Use 'minLength: 1' instead. The example configuration allows the user to
   choose any password at all, but also contains suggestions for other
   password-requirements schemes. (thanks Alberto)
 - *users* now can use stronger password hashes, if `crypt_gensalt()` is
   available in the *crypt* library. (thanks Evan)
 - *machineid* module supports several variations of writing /etc/machine-id .


# 3.3.0-alpha6 (2023-11-16)

This release contains contributions from (alphabetically by first name):
 - Adriaan de Groot
 - Anke Boersma

 This is a hotfix release because -alpha5 didn't compile,
 and Anke repaired the partition unit-tests when building with Qt6.


# 3.3.0-alpha5 (2023-11-13)

This release contains contributions from (alphabetically by first name):
 - Adriaan de Groot
 - Alejo Fernandez
 - Anke Boersma
 - Christophe Marin
 - Emir Sari
 - Evan James
 - Gaël PORTAY
 - Gecko Linux